Bug 567005, setting overflow to visible in the featured addons list

--- a/media/css/zamboni/zamboni.css
+++ b/media/css/zamboni/zamboni.css
@@ -1188,7 +1188,6 @@ form .error .note.error {
 }
 
 #featured-addons ul {
-    overflow: hidden;
     width: 96.7%;
     padding-left: 3.3%;
 }
